@@ -3,7 +3,6 @@ package bl4ckscor3.mod.ceilingtorch.compat.bonetorch;
 import java.util.Map;
 
 import com.builtbroken.bonetorch.BoneTorchMod;
-import com.google.common.collect.ImmutableMap;
 
 import bl4ckscor3.mod.ceilingtorch.CeilingTorch;
 import bl4ckscor3.mod.ceilingtorch.ICeilingTorchCompat;
@@ -16,13 +15,13 @@ import net.minecraft.world.level.block.state.BlockBehaviour;
 import net.neoforged.neoforge.registries.DeferredBlock;
 
 public class BoneTorchCompat implements ICeilingTorchCompat {
-	public static final DeferredBlock<CeilingTorchBlock> CEILING_BONE_TORCH = CeilingTorch.BLOCKS.register("bonetorch_bonetorch", () -> new CeilingTorchBlock(BlockBehaviour.Properties.copy(Blocks.TORCH), ParticleTypes.FLAME, BoneTorchMod.BONETORCH));
+	public static final DeferredBlock<CeilingTorchBlock> CEILING_BONE_TORCH = CeilingTorch.BLOCKS.register("bonetorch_bonetorch", () -> new CeilingTorchBlock(BlockBehaviour.Properties.ofFullCopy(Blocks.TORCH), ParticleTypes.FLAME, BoneTorchMod.BONETORCH));
 	private Map<ResourceLocation, Block> placeEntries;
 
 	@Override
 	public Map<ResourceLocation, Block> getPlaceEntries() {
 		if (placeEntries == null)
-			placeEntries = ImmutableMap.of(getRegistryName(BoneTorchMod.BONETORCH.get()), CEILING_BONE_TORCH.get());
+			placeEntries = Map.of(BoneTorchMod.BONETORCH.getId(), CEILING_BONE_TORCH.get());
 
 		return placeEntries;
 	}
